Use TransactionTemplate for Substance